# graphql-benchmarks

./: .gitignore  README.md  config.yaml  dashboard.py  gbench.py  gbench_v2.py  pyproject.toml  requirements.txt  results.json
queries/: basic.js  object_list.js  object_list.json  scalar_list.js  top-movies-rest.js  top-movies.js
servers/asgi-ariadne/: server.py
servers/asgi-graphql-core/: Dockerfile  requirements.txt  server.py
servers/asgi-strawberry/: requirements.txt  server.py
servers/django-ariadne/: Dockerfile  requirements.txt
servers/django-ariadne/app/: schema.py  settings.py  urls.py
servers/django-graphene/: pyproject.toml  requirements.txt
servers/django-graphene/api/: schema.py
servers/django-graphene/app/: schema.py  settings.py  urls.py
servers/django-graphene/main/: settings.py  urls.py
servers/django-plain-json/: pyproject.toml
servers/django-plain-json/api/: views.py
servers/django-plain-json/main/: urls.py
servers/django-rest-framework/: pyproject.toml
servers/django-rest-framework/api/: serializers.py
servers/django-rest-framework/main/: settings.py  urls.py
servers/django-strawberry/: db.sqlite3  pyproject.toml  requirements.txt
servers/django-strawberry-async/: Dockerfile  pyproject.toml
servers/django-strawberry-async/api/: schema.py
servers/django-strawberry-async/main/: urls.py
servers/django-strawberry-async/movies/migrations/: 0001_initial.py  0002_auto_20210822_1225.py
servers/django-strawberry-queryset/: Dockerfile
servers/django-strawberry-queryset/api/: schema.py
servers/django-strawberry-queryset/main/: settings.py  urls.py
servers/django-strawberry-simple-resolvers/: pyproject.toml
servers/django-strawberry-simple-resolvers/api/: schema.py
servers/django-strawberry-simple-resolvers/movies/: models.py
servers/django-strawberry/app/: schema.py  settings.py  urls.py
servers/django-strawberry/main/: urls.py
servers/fastapi-sqlalchemy/: Dockerfile  alembic.ini  app.py  db.sqlite3  main.py  pyproject.toml
servers/fastapi-sqlalchemy/alembic/: env.py
servers/fastapi-sqlalchemy/alembic/versions/: fc48e8664a90_.py
servers/fastapi-sqlalchemy/db/: base.py  models.py  queries.py  seed.py
servers/fastapi-sqlalchemy/gql/: app.py  schema.py
servers/fastapi-sqlalchemy/rest/: router.py  schema.py
servers/node-express/: package-lock.json
servers/starlette-ariadne/: requirements.txt  server.py
servers/starlette-graphene-v3/: Dockerfile  requirements.txt  server.py
servers/starlette-strawberry/: server.py
servers/tartiflette-aiohttp/: Dockerfile  requirements.txt  server.py
