[tool.poetry]
name = "python-graphql-benchmarks"
version = "0.1.0"
description = ""
authors = ["Jonathan Kim <jkimbo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
dash = "^2.0.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-renderer = "^1.9.1"
dash-table = "^5.0.0"
numpy = "^1.21.2"
docker = "^5.0.2"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
